# mwecppwrapperpython

./: README.md
Startpaket/: Folienvorlage.pptx  Gitlab-Guide.docx  Hinweis_Lernraum.txt  LINKS.txt
code/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  PyC++.sln  ZERO_CHECK.vcxproj.filters  info.txt  main.cpp  module_name.vcxproj  module_name.vcxproj.filters  test_module.py
code/cython/basic_arithmetic/: basic_arithmetic.c  basic_arithmetic.pyx  setup.py  testspace.py
code/cython/hello_world/: hello_world.c  hello_world.pyx  setup.py  testspace.py
code/cython/mwe/: Multiply.cpp  Multiply.hpp  Multiply.pxd  Multiply_wrapper.c  Multiply_wrapper.cpp  Multiply_wrapper.pyx  basicArithmetic.c  basicArithmetic.cpp  basicArithmetic.pyx  eigenTest.pxd  eigenTest.pyx  eigency_test.hpp  eigency_test.py  eigency_test.pyx  master.cpp  master.pyx  matrixMultiplication.py  npTest.c  npTest.cpp  npTest.pyx  numpy_test.c  setup.py  testEigen.py  testMatrixMultiplication.py  testspace.py
code/pybind11_module_testing/: ALL_BUILD.vcxproj  CMakeLists.txt  ZERO_CHECK.vcxproj  cmake_install.cmake  main.cpp  module_name.vcxproj  playground.py  testMatrixMultiplication.py
code/pybind11_module_testing/cython_module/: dictTest.pyx  master.cpp  matrixManipulation.pyx  matrixMultiplication.py  setup.py  testMatrixMultiplication.py  testspace.py
documentation/: info.txt
documentation/cython_workflow/: Cython workflow.txt
documentation/doxygen/: Doxyfile
documentation/doxygen/html/: _multiply_8hpp_source.html  annotated.html  class_test_class-members.html  class_test_class.html  classes.html  classmath_1_1_multiply-members.html  classmath_1_1_multiply.html  dir_050edd66366d13764f98250ef6db77f6.html  dir_0cff598484268b959068b0a3e724a322.html  dir_299a4fca8c18c553bb6acaa7f51c9cf8.html  files.html  globals.html  (+15 more)
documentation/pybind11_workflow/: pybind11_workflow.txt  pybind11_workflow.txt.txt
(+15 files in other folders)
